--- a/Admin-Dailyn-Frontend/package.json
+++ b/Admin-Dailyn-Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jquery": "^3.3.2",
+    "adm-zip": "^0.4.11",
     "bootstrap": "^3.3.7",
     "cldrjs": "^0.5.0",
     "core-js": "^2.4.1",
@@ -29,8 +30,16 @@
     "devextreme-angular": "^17.2.7",
     "devextreme-aspnet-data": "^1.4.6",
     "globalize": "^1.3.0",
+    "handlebars": "^4.0.12",
+    "hoek": "^5.0.4",
+    "https-proxy-agent": "^2.2.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "parsejson": "0.0.3",
     "rxjs": "^5.4.2",
+    "sshpk": "^1.14.2",
+    "ssri": "^6.0.1",
+    "url-parse": "^1.4.3",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
